src/test/ui/traits/associated_type_bound/check-trait-object-bounds-6.stderr
error[E0271]: type mismatch resolving `<i32 as Is>::T == i64`
  --> $DIR/check-trait-object-bounds-6.rs:20:5
   |
LL |     is_obj(x)
   |     ^^^^^^ expected `i64`, found `i32`
   |
note: required by a bound in `is_obj`
  --> $DIR/check-trait-object-bounds-6.rs:17:23
   |
LL | fn is_obj<T: ?Sized + Obj>(_: &T) {}
   |                       ^^^ required by this bound in `is_obj`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
